CommandLine process execution fixes
- command line executions now work correctly when executed under Linux-based operation systems (assuming MacOs will work too but untested)
- renamed class