@@ -3,14 +3,16 @@ package com.glenfordham.utils.process.cmd;
 import com.glenfordham.utils.StreamUtils;
 import com.glenfordham.utils.process.ProcessWrapper;
 import com.glenfordham.webserver.logging.Log;
+import org.apache.commons.lang3.SystemUtils;
 
 import java.io.IOException;
+import java.util.Arrays;
 
-public class CmdLine {
+public class CommandLine {
 
     private String commandLineToRun;
 
-    public CmdLine(String commandLineToRun) {
+    public CommandLine(String commandLineToRun) {
         this.commandLineToRun = commandLineToRun;
     }
 
@@ -24,15 +26,30 @@ public class CmdLine {
         if (commandLineToRun.isEmpty()) {
             throw new CmdLineException("Unable to invoke empty command");
         }
+
+        // When running under Linux/Mac, run using bash to ensure that execution behaviour matches that of the terminal
+        String[] osSafeCmdLine;
+        if (SystemUtils.IS_OS_WINDOWS) {
+            osSafeCmdLine = new String[]{commandLineToRun};
+        } else if (SystemUtils.IS_OS_LINUX || SystemUtils.IS_OS_MAC) {
+            osSafeCmdLine = new String[]{"bash", "-c", commandLineToRun};
+        } else {
+            throw new CmdLineException("Unsupported Operating System");
+        }
+
         // Invoke the executable using ProcessWrapper to ensure all streams and the process are closed.
         // Wait for the process to complete and log error if an error code is returned
-        Log.debug("Executing process: " + commandLineToRun);
-        try (ProcessWrapper processWrapper = new ProcessWrapper(
-                Runtime.getRuntime().exec(commandLineToRun))) {
-            if (processWrapper.getProcess().waitFor() != 0) {
+        Log.debug("Executing process: " + Arrays.toString(osSafeCmdLine));
+        try {
+            ProcessWrapper processWrapper = new ProcessWrapper(new ProcessBuilder(osSafeCmdLine).start());
+            final int processReturnValue = processWrapper.getProcess().waitFor();
+            Log.debug("Process returned:" + processReturnValue);
+            if (processReturnValue != 0) {
                 Log.error(StreamUtils.getString(processWrapper.getProcess().getErrorStream()));
             } else {
-                return StreamUtils.getString(processWrapper.getProcess().getInputStream());
+                String processOutput = StreamUtils.getString(processWrapper.getProcess().getInputStream());
+                Log.debug("Process stdout:" + processOutput);
+                return processOutput;
             }
         } catch (InterruptedException iE) {
             Log.error("Interrupted execution of process", iE);
